nx-kubeflow-deployment/kubeflow/ingress/.todo/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress-tls-ext
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kubeflow-kcd.demo.kubermatic.io
    http:
      paths:
        - backend:
            service:
              name: istio-ingressgateway
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
  tls:
  - hosts:
    - kubeflow-kcd.demo.kubermatic.io # This should match a DNS name in the Certificate
    secretName: kubeflow-demo-ingress-cert # This should match the Certificate secretName
